Fix margin around text and image blocks in image-text component so that there is consistent spacing-wide format to responsive/small-format.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2255,6 +2255,12 @@ div[data-type="feature-block"] .component-inner {
 .image-text-v1 .btn {
   margin: 20px auto;
 }
+.image-text-v1 .image-text-text {
+  margin: 15px;
+}
+.image-text-v1 .image-text-image {
+  margin: 15px;
+}
 .image-text-v1 .image-text-image img {
   margin: 15px auto;
 }
