--- a/public/less/frontend/components/image-text-v1.less
+++ b/public/less/frontend/components/image-text-v1.less
@@ -21,6 +21,12 @@
     .btn {
       margin: 20px auto;
     }
+    .image-text-text {
+      margin: 15px;
+    }
+    .image-text-image {
+      margin: 15px;
+    }
     .image-text-image img {
       margin: 15px auto;
     }
